# xfstt

./: .gitignore  CHANGES  COPYING.LIB  ChangeLog  CmapTable.cpp  EbdtTable.cpp  EblcTable.cpp  FAQ  GaspTable.cpp  GlyfTable.cpp  HeadTable.cpp  HheaTable.cpp  INSTALL  LocaTable.cpp  LtshTable.cpp  Makefile  Makefile.am  NEWS  NameTable.cpp  Os2Table.cpp  RAFile.cpp  README  README.txt  RasterDraw.cpp  RasterHints.cpp  RasterScale.cpp  THANKS  THANKS.txt  TODO  TTFont.cpp  VdmxTable.cpp  arch.h  autogen.sh  configure.ac  encoding.cpp  encoding.h  font.properties  perftest.cpp  showttf.cpp  tst.sh  (+7 more)
debian/: README.debian  changelog  conffiles  control  copyright  dirs  docs  examples  init.d  postinst  postrm  rules
doc/: .gitignore  FAQ  Makefile.am  xfstt.1x  xfstt.1x.in  xfstt.lsm
doc/examples/: font.properties  initrc.xfstt  test.sh  ttfont.html
libfstt/: .gitignore  Makefile.am  README  arch.h  rafile.cc  raster_draw.cc  raster_hints.cc  raster_scale.cc  table_cmap.cc  table_cvt.cc  table_ebdt.cc  table_eblc.cc  table_fpgm.cc  table_gasp.cc  table_glyf.cc  table_hdmx.cc  table_head.cc  table_hhea.cc  table_hmtx.cc  table_kern.cc  table_loca.cc  table_ltsh.cc  table_maxp.cc  table_name.cc  table_os2.cc  table_prep.cc  table_vdmx.cc  ttf.h  ttfont.cc
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in
slackware/: AUTHOR  INSTALL.en  INSTALL.en.html  INSTALL.fr.html  INSTALL.fr.txt  README.en  README.fr  SlackMe.sh  doinst.sh  rc.xfstt
src/: .gitignore  Makefile.am  encoding.cc  encoding.h  gettext.h  mesg.h  patchttf.cc  perftest.cc  showttf.cc  ttfn.h  xfstt.cc  xfstt.h
